# WaveMint

./: README.md
backend/: .env.example  package.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
backend/src/achievements/: achievements.module.ts  achievements.service.ts
backend/src/analytics/: analytics.controller.ts  analytics.module.ts  analytics.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
backend/src/courses/: courses.controller.ts  courses.module.ts  courses.service.ts
backend/src/events/: events.module.ts  events.service.ts
backend/src/launches/: launch.entity.ts  launches.controller.ts  launches.module.ts  launches.service.ts
backend/src/quizzes/: quizzes.controller.ts  quizzes.module.ts  quizzes.service.ts
backend/src/rewards/: rewards.controller.ts  rewards.module.ts  rewards.service.ts
backend/src/users/: users.controller.ts  users.service.ts
contracts/: Cargo.toml
contracts/achievement/: Cargo.toml
contracts/achievement/src/: lib.rs
contracts/bonding_curve/: Cargo.toml
contracts/bonding_curve/src/: lib.rs
contracts/launch/: Cargo.toml
contracts/launch/src/: lib.rs
contracts/leaderboard/: Cargo.toml
contracts/leaderboard/src/: lib.rs
contracts/learning/: Cargo.toml
contracts/learning/src/: lib.rs
contracts/liquidity_migration/: Cargo.toml
contracts/rewards/: Cargo.toml
frontend/: next.config.ts  package.json  tailwind.config.ts
telegram-bot/: .env.example  package.json
telegram-bot/src/: formatter.js  index.js
(+20 files in other folders)
